--- a/src/app/components/user-dashboard/profile-recommendations/profile-recommendations.component.scss
+++ b/src/app/components/user-dashboard/profile-recommendations/profile-recommendations.component.scss
@@ -125,11 +125,15 @@
 
       .song-title {
         font-weight: 700;
-        font-size: 14px;
+        font-size: 16px;
+        margin-bottom: 2px;
       }
 
       .song-title:hover {
-        color: rgb(224, 224, 224);
+        //   color: rgb(224, 224, 224);
+        margin-bottom: 0px;
+        border-bottom: 2px solid white;
+        display: inline-block;
       }
 
       .text-muted {
